forbid inheritance ; add version to generated annotation